--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@userscripters/template",
+  "name": "@userscripters/editors-den",
   "version": "1.0.0",
-  "description": "template repository for userscripters' projects",
+  "description": "semi-automated editing with style",
   "scripts": {
     "test": "mocha",
     "lint": "eslint src --fix --ext .js,.ts",
@@ -13,31 +13,29 @@
     "build-legacy": "tsc --target es5 --outDir dist/legacy && npm run uglify-legacy",
     "build-all": "bash ./scripts/build.sh",
     "headers-tm": "bash ./scripts/headers.sh",
-    "readme": "generate-readme"
+    "readme": "generate-readme",
+    "postversion": "bash ./scripts/postversion.sh"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/userscripters/template.git"
+    "url": "git+https://github.com/userscripters/editors-den.git"
   },
   "keywords": [
     "userscripts",
-    "stackoverflow"
+    "stackoverflow",
+    "editing",
+    "stackexchange"
   ],
   "author": {
-    "name": "Jane Doe",
-    "email": "jane@doe.com"
+    "name": "Oleg Valter",
+    "email": "oleg.a.valter@gmail.com"
   },
-  "contributors": [
-    {
-      "name": "John Doe",
-      "email": "john@doe.com"
-    }
-  ],
+  "contributors": [],
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/userscripters/template/issues"
+    "url": "https://github.com/userscripters/editors-den/issues"
   },
-  "homepage": "https://github.com/userscripters/template#readme",
+  "homepage": "https://github.com/userscripters/editors-den#readme",
   "devDependencies": {
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
@@ -47,6 +45,7 @@
     "@typescript-eslint/parser": "^4.29.0",
     "@userscripters/generate-headers": "^1.6.4",
     "@userscripters/generate-readme": "^1.1.0",
+    "@userscripters/stackexchange-global-types": "^1.2.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.32.0",
