--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -20,13 +20,16 @@ jobs:
             - name: Install dependencies
               run: |
                   npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
-                  npm install
+                  npm install --production=false
               env:
                   NODE_AUTH_TOKEN: ${{github.token}}
+                  NODE_ENV: production
             - name: Update to the latest minor/patch version
               run: npx npm-check-updates -u --target minor
             - name: Install updated dependencies & update lockfile
-              run: npm install && npm update
+              run: |
+                  npm install
+                  npm update
             - name: Make sure everything's ok
               run: npm test
             - name: Push changes to GitHub
