--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
   "devDependencies": {
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
+    "@types/greasemonkey": "^4.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
+    "@types/tampermonkey": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
-    "@userscripters/generate-headers": "^1.6.4",
+    "@userscripters/generate-headers": "^2.5.0",
     "@userscripters/generate-readme": "^1.1.0",
     "@userscripters/stackexchange-global-types": "^1.3.1",
     "chai": "^4.3.4",
