--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
         "skipLibCheck": true,
         "downlevelIteration": true,
         "outDir": "dist",
-        "types": ["@userscripters/stackexchange-global-types"]
+        "types": [
+            "@userscripters/stackexchange-global-types",
+            "tampermonkey",
+            "greasemonkey"
+        ]
     },
     "exclude": ["dist"],
     "include": ["src"]
