--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -28,8 +28,10 @@ jobs:
               run: npx npm-check-updates -u --target minor
             - name: Install updated dependencies & update lockfile
               run: |
-                  npm install
+                  npm install --production=false
                   npm update
+              env:
+                  NODE_ENV: production
             - name: Make sure everything's ok
               run: npm test
             - name: Push changes to GitHub
