installed SE API types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "outDir": "dist",
         "types": [
             "@userscripters/stackexchange-global-types",
+            "@userscripters/stackexchange-api-types",
             "tampermonkey",
             "greasemonkey"
         ]
