--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -20,18 +20,15 @@ jobs:
             - name: Install dependencies
               run: |
                   npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
-                  npm install --production=false
+                  npm install
               env:
                   NODE_AUTH_TOKEN: ${{github.token}}
-                  NODE_ENV: production
             - name: Update to the latest minor/patch version
               run: npx npm-check-updates -u --target minor
             - name: Install updated dependencies & update lockfile
               run: |
-                  npm install --production=false
+                  npm install
                   npm update
-              env:
-                  NODE_ENV: production
             - name: Make sure everything's ok
               run: npm test
             - name: Push changes to GitHub
